function(pistache_example example_name)
    set(EXAMPLE_EXECUTABLE run_${example_name})
    set(EXAMPLE_SOURCE ${example_name}.cc)
    
if(CMAKE_BUILD_TYPE MATCHES "Debug")
    message("-----------debug mode---------")
    set(CMAKE_CXX_FLAGS_DEBUG “${CMAKE_CXX_FLAGS_DEBUG} -O0”)
    set(CMAKE_C_FLAGS_DEBUG “${CMAKE_CXX_FLAGS_DEBUG} -O0”)
endif()

    add_executable(${EXAMPLE_EXECUTABLE} ${EXAMPLE_SOURCE})
    target_link_libraries(${EXAMPLE_EXECUTABLE} pistache_static)
    target_link_libraries(${EXAMPLE_EXECUTABLE} lustreapi)
endfunction()

pistache_example(hello_server)
pistache_example(http_server)
pistache_example(http_client)
pistache_example(rest_server)
pistache_example(custom_header)
pistache_example(http_server_shutdown)

set(RAPIDJSON_ROOT_DIR PATH "${PROJECT_SOURCE_DIR}/third-party/rapidjson")

find_package(RapidJSON)
if (RAPIDJSON_FOUND)
    include_directories(${RAPIDJSON_INCLUDES})
    pistache_example(rest_description)
else()
    message(FATAL_ERROR "RapidJSON not found. Could not build rest_description example.")
endif()
